# mink

./: .buildinfo  .gitignore  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  README.md  configuration.html  derivations.html  genindex.html  index.html  inverse_kinematics.html  lie.html  limits.html  objects.inv  py-modindex.html  pyproject.toml  references.html  search.html  searchindex.js  tasks.html  utilities.html
.doctrees/: configuration.doctree  derivations.doctree  environment.pickle  index.doctree  inverse_kinematics.doctree  lie.doctree  limits.doctree  references.doctree  tasks.doctree  utilities.doctree
.github/workflows/: ci.yml  docs.yml
_sources/: configuration.rst.txt  derivations.rst.txt  index.rst.txt  inverse_kinematics.rst.txt  limits.rst.txt  references.rst.txt  tasks.rst.txt
docs/: conf.py  environment.yml  index.rst  lie.rst  requirements.txt  tasks.rst  utilities.rst
examples/: arm_aloha.py  arm_hand_iiwa_allegro.py  arm_hand_kula_allegro.py  arm_hand_xarm_leap.py  arm_iiwa.py  arm_ur5e.py  arm_ur5e_actuators.py  compare.py  dual_iiwa.py  flying_dual_arm_ur5e.py  hand_shadow.py  humanoid_g1.py  humanoid_h1.py  jlog.py  main.py  mobile_kinova.py  mobile_kinova_leap.py  mobile_stretch.py  mobile_tidybot.py  mobile_tidybot_actuators.py  quadruped_go1.py  quadruped_spot.py  utils.py
examples/aloha/: aloha.xml  scene.xml
examples/boston_dynamics_spot/: scene.xml  spot_arm.xml
examples/franka_emika_panda/: scene.xml
examples/hello_robot_stretch_3/: scene.xml  stretch.xml
examples/kuka_iiwa_14/: iiwa14.xml  scene.xml
examples/leap_hand/: right_hand.xml
examples/shadow_hand/: scene_left.xml
examples/stanford_tidybot/: README.md  mobile_kinova.xml  scene.xml  scene_base.xml  scene_mobile_kinova.xml  tidybot.xml
examples/ufactory_xarm7/: scene.xml  xarm7_nohand.xml
examples/unitree_g1/: g1.xml  scene.xml
examples/unitree_go1/: go1.xml  scene.xml
examples/unitree_h1/: h1.xml  scene.xml
examples/universal_robots_ur5e/: scene.xml  ur5e.xml
examples/wonik_allegro/: left_hand.xml
mink/: __init__.py  configuration.py  constants.py  exceptions.py  lie.py  solve_ik.py  utils.py
mink/lie/: __init__.py  base.py  interpolate.py  log.py  se3.py  so3.py  utils.py
mink/lie/tests/: test_axioms.py  test_log.py  test_operations.py  utils.py
mink/limits/: __init__.py  acceleration_limit.py  collision_avoidance_limit.py  configuration_limit.py  exceptions.py  limit.py  velocity_limit.py
mink/tasks/: __init__.py  com_task.py  damping_task.py  exceptions.py  frame_task.py  posture_task.py  relative_frame_task.py  task.py
tests/: test_collision_avoidance_limit.py  test_com_task.py  test_configuration.py  test_configuration_limit.py  test_damping_task.py  test_frame_task.py  test_jacobians.py  test_lie_axioms.py  test_lie_operations.py  test_lie_utils.py  test_posture_task.py  test_relative_frame_task.py  test_solve_ik.py  test_task.py  test_utils.py  test_velocity_limit.py  utils.py
